api: update get dialogues to search for sender
